--- a/coffe-DoAN/coffe-DoAN/frmMain.resx
+++ b/coffe-DoAN/coffe-DoAN/frmMain.resx
@@ -120,39 +120,56 @@
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
   <data name="barButtonItem4.LargeGlyph" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAACxMAAAsTAQCanBgAAAHTSURBVFhH7dbLKwZRHMbx1zXkL1AuKbKQFCnJbcXCNUqU
-        W7kssJBrEhZWohRZy4qN+2WlLCmRBX+FDQo7vs/MUa+3d5CZsdD71Kc5c6bX/Mw5Z+YEInFIISpC5OAE
-        x6Ydej0Dur6PfNMXrAA/zi7OQkxizlA79HoXdG0ay6Yv2A5cZxxjdjNsdH3EbnqTR7y5dI9fR3/AbV7N
-        8VeJFPBRQBk0+bLNsQSD0KxvMcdmzKDJHLUaFE8K2EQm1pAGLal19KAXWpa12EADjqBlqXhSwB4SsQI9
-        hS2oAN1MN5pAkemrwiHaoHhSQDVGkQXdTG86DUEealCHXHwMxaxpK/9jEoZLFGIRg2h1OMS3AjQnNP7d
-        0Epwim8FVGIeC2hXh0N8K0DLrx8DSFKHQ3wrQGOvORCHP58DjdA7QUtN9ILqRLj4UoB2TPV200ortInp
-        sM4+x1UB51AR2hf0qcNEj3zJblrRm3EVydaZPS+eoN+eqsNt9B1QEfHWmZ1SLEKFFKvDRMvzAanWmYe5
-        gb6C30XLU0/O82i/t203v4w+RBoCz6NHewd9lJwyhSsED5WnSccttB8oh4rSS0j7/gNcIwW+JgHDuMQL
-        nnGBIfj2n0fyXxMIvAMDAYC8KuUf3QAAAABJRU5ErkJggg==
+        iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
+        EwAACxMBAJqcGAAAAdNJREFUWEft1ssrBlEcxvHXNeQvUC4pspAUKcltxcI1SpRbuSywkGsSFlaiFFnL
+        io37ZaUsKZEFf4UNCju+z8xRr7d3kJmx0PvUpzlzptf8zDln5gQicUghKkLk4ATHph16PQO6vo980xes
+        AD/OLs5CTGLOUDv0ehd0bRrLpi/YDlxnHGN2M2x0fcRuepNHvLl0j19Hf8BtXs3xV4kU8FFAGTT5ss2x
+        BIPQrG8xx2bMoMkctRoUTwrYRCbWkAYtqXX0oBdalrXYQAOOoGWpeFLAHhKxAj2FLagA3Uw3mkCR6avC
+        IdqgeFJANUaRBd1MbzoNQR5qUIdcfAzFrGkr/2MShksUYhGDaHU4xLcCNCc0/t3QSnCKbwVUYh4LaFeH
+        Q3wrQMuvHwNIUodDfCtAY685EIc/nwON0DtBS030gupEuPhSgHZM9XbTSiu0iemwzj7HVQHnUBHaF/Sp
+        w0SPfMluWtGbcRXJ1pk9L56g356qw230HVAR8daZnVIsQoUUq8NEy/MBqdaZh7mBvoLfRctTT87zaL+3
+        bTe/jD5EGgLPo0d7B32UnDKFKwQPladJxy20HyiHitJLSPv+A1wjBb4mAcO4xAuecYEh+PafR/JfEwi8
+        AwMBgLwq5R/dAAAAAElFTkSuQmCC
 </value>
   </data>
   <data name="barButtonItem5.LargeGlyph" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
+        iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
+        EwAACxMBAJqcGAAAA/pJREFUWEfNVltLVFEU9h8EQWfPkYwuVGaXB4sgKLoRSBTdniKK6KmnqLB6qNAS
+        rdE0TUfHCzhe5oyjDuPopDOO0+RcHCLBXiSEoKhA6PLggz2YtNprn7PHM9OZ2xkfWvDB7D1n7+9ba39r
+        n5P3XwbxtAQ3+ToWjgT7FkvCjl/ZYOewtIwocknLe/sHf59s9y8WPx+a32i0dijbpw7BY/6UP9EBq4UC
+        VxcUPvLAjnIvbDZKkwpN8sj3aW+UC7bWu5iA7eXuPwpNfPiDkYv+yUjAH4qCySrBMbdFcyO9ODPoYwIQ
+        CmV8+EORzrFAKCw5R6JHbM2wz9WmuZFepBUQCEQ3Dvv8lU1Wax+x10Kh26y5kV6kFaAOrQ1yBRewrXJI
+        W4AvPHVpIhR9nYkHxOFGIH3PQOh+AoKlEoSuKiBSNYhDLyB/vF1zzdmeGiiucENRe3USDwSjlnQeED2t
+        lMi4Qmp/BmSgDgz9dUCs1fI8FSWOmP5ZW++9AJ8D68HlLU7uAefEq6qkHqDkQg/NmBIbMFPfv5mKo81A
+        ep8yIYkiBsKnYSG8Bn6E1urzAJZYsFSB+LIlNieOmem4mYpRPTvexkSQ7ir2m8/3v73BBCAUmvhI5QHR
+        bWJZGZwN8hzNnvTVyCWnYISSPMb/UJT8PK1UpgJSecAwUMtKz8tOHPUygb2GGrKJeYGLiT1Dj8tAjcr3
+        4AKSHkEqDxCrEYitemWMXkAyXmJKKnQlCMAjo4bla+yBa0yAM5kJ1cEXcbAS0yz5mGVL3a5+RlDMxwXg
+        GFuV/2+XSuBn1wa4/Px69h7AFsOMYmNeAa9cAZH2PlFVQHQrHsBuUdb03roE86cOwtTFEj0eqJM3V0rO
+        PYDGw3ZTGxKNJ9AOEOix8WogrMa7TABCoYyPVB7A/maElJjN0bZTG4/0yh5hY7ygqGB1CyKspsepBahD
+        vZCD2GRCLC+fE+kR4O3Ixt5W+bcqazXSCkj3LkAyoQeNRi8jvA988Rni2DDUwDpGSwQXMHf+aPYeiIGK
+        WDlv+QWETmeXkGJC5gtajcS1jQ2yBx7cu5q9BxKBx4DnjNmyNyKtDHrCoPES4ii1lcHNziuwefS+Pg/k
+        inMzbbBn+hbsenNbnwdyBReAUCjjIyMP5IC0AhI9sOfl6go4Pt2QWoA6cMGBoKS5kV4URssYeVGkNDMB
+        +yd7NTfSg4JAE+x+ewf2Tt+B9YPlGQigV+2W8Q44MeWAtg/vwPZxNis8fO+J4cncBAx8nQLHlygcdOGH
+        TcWSQpM8xJHmb+KoGQ47W6FpJgI9s9M5oXEmDIecZnZRrbNUDis0yYO+dHaRUdN3g6N2Gb/t5JsvV1Qs
+        ITnpLhMUGiXy8v4CQNm56zA4EKIAAAAASUVORK5CYII=
+</value>
+  </data>
+  <data name="barButtonItem6.LargeGlyph" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
         iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAACxMAAAsTAQCanBgAAAP6SURBVFhHzVZbS1RRFPYfBEFnz5GMLlRmlweLICi6EUgU
-        3Z4iiuipp6iweqjQEq3RNE1Hxws4XuaMow7j6KQzjtPkXBwiwV4khKCoQOjy4IM9mLTaa5+zxzPTmdsZ
-        H1rwwew9Z+/vW2t/a5+T918G8bQEN/k6Fo4E+xZLwo5f2WDnsLSMKHJJy3v7B3+fbPcvFj8fmt9otHYo
-        26cOwWP+lD/RAauFAlcXFD7ywI5yL2w2SpMKTfLI92lvlAu21ruYgO3l7j8KTXz4g5GL/slIwB+Kgskq
-        wTG3RXMjvTgz6GMCEAplfPhDkc6xQCgsOUeiR2zNsM/VprmRXqQVEAhENw77/JVNVmsfsddCodusuZFe
-        pBWgDq0NcgUXsK1ySFuALzx1aSIUfZ2JB8ThRiB9z0DofgKCpRKEriogUjWIQy8gf7xdc83ZnhoornBD
-        UXt1Eg8Eo5Z0HhA9rZTIuEJqfwZkoA4M/XVArNXyPBUljpj+WVvvvQCfA+vB5S1O7gHnxKuqpB6g5EIP
-        zZgSGzBT37+ZiqPNQHqfMiGJIgbCp2EhvAZ+hNbq8wCWWLBUgfiyJTYnjpnpuJmKUT073sZEkO4q9pvP
-        97+9wQQgFJr4SOUB0W1iWRmcDfIczZ701cglp2CEkjzG/1CU/DytVKYCUnnAMFDLSs/LThz1MoG9hhqy
-        iXmBi4k9Q4/LQI3K9+ACkh5BKg8QqxGIrXpljF5AMl5iSip0JQjAI6OG5WvsgWtMgDOZCdXBF3GwEtMs
-        +ZhlS92ufkZQzMcF4Bhblf9vl0rgZ9cGuPz8evYewBbDjGJjXgGvXAGR9j5RVUB0Kx7AblHW9N66BPOn
-        DsLUxRI9HqiTN1dKzj2AxsN2UxsSjSfQDhDosfFqIKzGu0wAQqGMj1QewP5mhJSYzdG2UxuP9MoeYWO8
-        oKhgdQsirKbHqQWoQ72Qg9hkQiwvnxPpEeDtyMbeVvm3Kms10gpI9y5AMqEHjUYvI7wPfPEZ4tgw1MA6
-        RksEFzB3/mj2HoiBilg5b/kFhE5nl5BiQuYLWo3EtY0Nsgce3LuavQcSgceA54zZsjcirQx6wqDxEuIo
-        tZXBzc4rsHn0vj4P5IpzM22wZ/oW7HpzW58HcgUXgFAo4yMjD+SAtAISPbDn5eoKOD7dkFqAOnDBgaCk
-        uZFeFEbLGHlRpDQzAfsnezU30oOCQBPsfnsH9k7fgfWD5RkIoFftlvEOODHlgLYP78D2cTYrPHzvieHJ
-        3AQMfJ0Cx5coHHThh03FkkKTPMSR5m/iqBkOO1uhaSYCPbPTOaFxJgyHnGZ2Ua2zVA4rNMmDvnR2kVHT
-        d4Ojdhm/7eSbL1dULCE56S4TFBol8vL+AkDZueswOBCiAAAAAElFTkSuQmCC
+        YQUAAAAJcEhZcwAACxMAAAsTAQCanBgAAAJ4SURBVFhH7ZdLqI1RFMePx0AekVcohDAwwkBIiJlXFEKK
+        GHBlIEIiz5K85wwkopgwkBKiTMREeURRolCIYkD4/ffaK/ucvnvOPefuc0f3V7/O+tb9+r7V3uvbe99S
+        J+1gBD7CxzHucIbg3+ggJTqSUbgW90XXxFw2pmFfCwMaYr3wHL7Bd3gBvYCLMae/6R7d2/C0bEEN6w98
+        jTvxE17C9bgUF2AlC3EJrsPL+BFH4hwchm1iO/q8unrYCxyDYihusLCMjei9MAGfo4rWM/7gYazKDvSX
+        7sJ5+BDv4V2cgaIr7rWwjD3YxcLSXLyD91HPO4E1eYBewGwlIlNRc7w8XBkH4m9KWtRqVI+8wtvYDWuy
+        Er2Am0okHEf1hlNUgJrR0Wgew2c4UIm20B3fogrQnKVsxaMWBmoVcApVxKRwVQfehL/D1X80OhpSZ3/8
+        TUkLUOOusLA++uF3VBGLlYioJ9RUjgrtaWGgF26zMKDGnWVh/ZxGFfAhXBnjUZ+iswrHWhgYhxol5yUq
+        1xBaUjUFKkJ9IfrgTzyIGurzeCbG8mzMKT6Eurc3NswVVAFP0adCQ/oNla/mF5yJ7WIK/kI98KQSkbTR
+        WmN3/G0K19CHvTWvYtNQD1QOeaVFy3QWtL1qVxyA01HrvaMFR7vhYPyK2rCyo2a8bmH45NLPUC9usbB0
+        C+dbmBd9XppjoWW2h4UB7YI+9EewKdNwA/0g4oWkeG4ZqlmzoxOOn2yKCvD9YTTqeJaV4fjewkC1AsRn
+        1Kk5G2kDiqI5Vs5PRNkbMW3A/rjZwjI2ob4Gkb0R0waciIssLEPrwGQL8zfiEyxa9aqpf9k6qUGp9A/e
+        NaR27u9E5gAAAABJRU5ErkJggg==
 </value>
   </data>
 </root>
