--- a/coffe-DoAN/coffe-DoAN/frmMain.resx
+++ b/coffe-DoAN/coffe-DoAN/frmMain.resx
@@ -135,41 +135,76 @@
   <data name="barButtonItem5.LargeGlyph" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
-        EwAACxMBAJqcGAAAA/pJREFUWEfNVltLVFEU9h8EQWfPkYwuVGaXB4sgKLoRSBTdniKK6KmnqLB6qNAS
-        rdE0TUfHCzhe5oyjDuPopDOO0+RcHCLBXiSEoKhA6PLggz2YtNprn7PHM9OZ2xkfWvDB7D1n7+9ba39r
-        n5P3XwbxtAQ3+ToWjgT7FkvCjl/ZYOewtIwocknLe/sHf59s9y8WPx+a32i0dijbpw7BY/6UP9EBq4UC
-        VxcUPvLAjnIvbDZKkwpN8sj3aW+UC7bWu5iA7eXuPwpNfPiDkYv+yUjAH4qCySrBMbdFcyO9ODPoYwIQ
-        CmV8+EORzrFAKCw5R6JHbM2wz9WmuZFepBUQCEQ3Dvv8lU1Wax+x10Kh26y5kV6kFaAOrQ1yBRewrXJI
-        W4AvPHVpIhR9nYkHxOFGIH3PQOh+AoKlEoSuKiBSNYhDLyB/vF1zzdmeGiiucENRe3USDwSjlnQeED2t
-        lMi4Qmp/BmSgDgz9dUCs1fI8FSWOmP5ZW++9AJ8D68HlLU7uAefEq6qkHqDkQg/NmBIbMFPfv5mKo81A
-        ep8yIYkiBsKnYSG8Bn6E1urzAJZYsFSB+LIlNieOmem4mYpRPTvexkSQ7ir2m8/3v73BBCAUmvhI5QHR
-        bWJZGZwN8hzNnvTVyCWnYISSPMb/UJT8PK1UpgJSecAwUMtKz8tOHPUygb2GGrKJeYGLiT1Dj8tAjcr3
-        4AKSHkEqDxCrEYitemWMXkAyXmJKKnQlCMAjo4bla+yBa0yAM5kJ1cEXcbAS0yz5mGVL3a5+RlDMxwXg
-        GFuV/2+XSuBn1wa4/Px69h7AFsOMYmNeAa9cAZH2PlFVQHQrHsBuUdb03roE86cOwtTFEj0eqJM3V0rO
-        PYDGw3ZTGxKNJ9AOEOix8WogrMa7TABCoYyPVB7A/maElJjN0bZTG4/0yh5hY7ygqGB1CyKspsepBahD
-        vZCD2GRCLC+fE+kR4O3Ixt5W+bcqazXSCkj3LkAyoQeNRi8jvA988Rni2DDUwDpGSwQXMHf+aPYeiIGK
-        WDlv+QWETmeXkGJC5gtajcS1jQ2yBx7cu5q9BxKBx4DnjNmyNyKtDHrCoPES4ii1lcHNziuwefS+Pg/k
-        inMzbbBn+hbsenNbnwdyBReAUCjjIyMP5IC0AhI9sOfl6go4Pt2QWoA6cMGBoKS5kV4URssYeVGkNDMB
-        +yd7NTfSg4JAE+x+ewf2Tt+B9YPlGQigV+2W8Q44MeWAtg/vwPZxNis8fO+J4cncBAx8nQLHlygcdOGH
-        TcWSQpM8xJHmb+KoGQ47W6FpJgI9s9M5oXEmDIecZnZRrbNUDis0yYO+dHaRUdN3g6N2Gb/t5JsvV1Qs
-        ITnpLhMUGiXy8v4CQNm56zA4EKIAAAAASUVORK5CYII=
+        EwAACxMBAJqcGAAAA/hJREFUWEftltlvjFEYxkepfV+b2oKxlek20061pLa0YmtTSiKWWKK0GlRbtcWS
+        UMTSEDRciEhpKiGhcWkpCXHhSrgQIpG49Df4PWfeLtNlbKNXnuTJu7/v+c53vjPj+Y+/RExSUtJY0z2B
+        QGC8qd0DBmb6/f4y6ampqVPQHyYnJ49ywX+NwsLCnikpKYvgNwZfZwF+eBC+g/Pwr8Wfn56ePslKogef
+        zzeMIXfgGj0xw25YyMPQ+fj9qDFpaWmz0I+0jUcFGgJvwyGys7Oz+7qAAbuXqR4WkUzeczOjA55qAayg
+        8SPkM1irJ8UuM/9JWI+u13EPfSk7NRV5Eda0Pbh/BJquY1tXSKdhf/Q5+DbB3dilFg8kJCT0tpx8Duwq
+        1Bj0ucTeImMV+yNQXETDLWb+FCxoH6JHyHL2LeoXm9k5GJLF+xthpgMr9+p9awFwr7kjwg5pNbsx0Fzq
+        fRxuNLMjdMpJeA+/sNoK+dDzmrcU3xp4VPrPQF2+hmkh1ATlQz5mB9JcQnuQPISETciz7EAc+jvkEb7n
+        cZaiBsJlMyOCvGv6EqRz+IbS9zpscMH20JOzXa9JqDKZl5iYOJomxZbiYCf6tpldgpxYaj/DHLiTnldh
+        XUZGRj9LCQdJeyjaqqHIjdglGoZcbinum8cOEq8yV5dgmzeQV89Qr7k8uhmpX2ZmODRcQXiBokYtRE3Q
+        J1qKDuJMOIeFJWDGhLwdQd1s+nyFqeQvMbcDcw6Z2gqcMyhKQeoqrdUQ81fp1bgkoB3RoqSTE09uBjkT
+        eM/T0HNhOf5G+Ik8fftuZyWbgX3G1BBw+CnYLJ2ilWrmAoDmZW1t+xGqM9PD+xyOXUCeLqASZCHSR8h9
+        99gjiZ+Q3gx8V0wNgQL9eul2Oox+GuZaSLFcFhV26eDTWem4je0QDAbH0PcBDxBnLrfTsNLMVjBkPMnr
+        aV5Ogj5F95np28ffiNpykwl6KvKayNuOHkCfoB7YPmztyBXkU3zTrcQBf03bHe0MPWhyl8TvZquoSAsz
+        swU60cT2wwbYxMCXyIfknkFfRErYoonNhTfN7BwUl8A7JJZitpxybP3p0K0Y1vRXQW0OPZp0GZmrc7Dy
+        qyRvI/kk8h4st9977cwBe8rVXq+3T6giMsgPwDpq7uvAmjsy1JxhbyjKojheX4aF1HAisfPID/AJ+iXy
+        KuEOqHukGKkfm3r4ET6iPvIvX3twAQ2wAdXSaSro0woDjSeTU0BM3341PAdPYBfDhZmZmYMs9ffByhvU
+        yEzZp0ztHuh9MfQVi7iF1JY26GkJdXn9Rh269djmbIZvlY3cBWtcsDvB0GNwBzvwAroru1vBhTOYV6E/
+        nFnm+o8oweP5ATupNdtQcnO6AAAAAElFTkSuQmCC
 </value>
   </data>
   <data name="barButtonItem6.LargeGlyph" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAACxMAAAsTAQCanBgAAAJ4SURBVFhH7ZdLqI1RFMePx0AekVcohDAwwkBIiJlXFEKK
-        GHBlIEIiz5K85wwkopgwkBKiTMREeURRolCIYkD4/ffaK/ucvnvOPefuc0f3V7/O+tb9+r7V3uvbe99S
-        J+1gBD7CxzHucIbg3+ggJTqSUbgW90XXxFw2pmFfCwMaYr3wHL7Bd3gBvYCLMae/6R7d2/C0bEEN6w98
-        jTvxE17C9bgUF2AlC3EJrsPL+BFH4hwchm1iO/q8unrYCxyDYihusLCMjei9MAGfo4rWM/7gYazKDvSX
-        7sJ5+BDv4V2cgaIr7rWwjD3YxcLSXLyD91HPO4E1eYBewGwlIlNRc7w8XBkH4m9KWtRqVI+8wtvYDWuy
-        Er2Am0okHEf1hlNUgJrR0Wgew2c4UIm20B3fogrQnKVsxaMWBmoVcApVxKRwVQfehL/D1X80OhpSZ3/8
-        TUkLUOOusLA++uF3VBGLlYioJ9RUjgrtaWGgF26zMKDGnWVh/ZxGFfAhXBnjUZ+iswrHWhgYhxol5yUq
-        1xBaUjUFKkJ9IfrgTzyIGurzeCbG8mzMKT6Eurc3NswVVAFP0adCQ/oNla/mF5yJ7WIK/kI98KQSkbTR
-        WmN3/G0K19CHvTWvYtNQD1QOeaVFy3QWtL1qVxyA01HrvaMFR7vhYPyK2rCyo2a8bmH45NLPUC9usbB0
-        C+dbmBd9XppjoWW2h4UB7YI+9EewKdNwA/0g4oWkeG4ZqlmzoxOOn2yKCvD9YTTqeJaV4fjewkC1AsRn
-        1Kk5G2kDiqI5Vs5PRNkbMW3A/rjZwjI2ob4Gkb0R0waciIssLEPrwGQL8zfiEyxa9aqpf9k6qUGp9A/e
-        NaR27u9E5gAAAABJRU5ErkJggg==
+        iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
+        EwAACxMBAJqcGAAAAnhJREFUWEftl0uojVEUx4/HQB6RVyiEMDDCQEiImVcUQooYcGUgQiLPkrznDCSi
+        mDCQEqJMxER5RFGiUIhiQPj999or+5y+e8495+5zR/dXv8761v36vtXe69t731In7WAEPsLHMe5whuDf
+        6CAlOpJRuBb3RdfEXDamYV8LAxpivfAcvsF3eAG9gIsxp7/pHt3b8LRsQQ3rD3yNO/ETXsL1uBQXYCUL
+        cQmuw8v4EUfiHByGbWI7+ry6etgLHINiKG6wsIyN6L0wAZ+jitYz/uBhrMoO9Jfuwnn4EO/hXZyBoivu
+        tbCMPdjFwtJcvIP3Uc87gTV5gF7AbCUiU1FzvDxcGQfib0pa1GpUj7zC29gNa7ISvYCbSiQcR/WGU1SA
+        mtHRaB7DZzhQibbQHd+iCtCcpWzFoxYGahVwClXEpHBVB96Ev8PVfzQ6GlJnf/xNSQtQ466wsD764XdU
+        EYuViKgn1FSOCu1pYaAXbrMwoMadZWH9nEYV8CFcGeNRn6KzCsdaGBiHGiXnJSrXEFpSNQUqQn0h+uBP
+        PIga6vN4JsbybMwpPoS6tzc2zBVUAU/Rp0JD+g2Vr+YXnIntYgr+Qj3wpBKRtNFaY3f8bQrX0Ie9Na9i
+        01APVA55pUXLdBa0vWpXHIDTUeu9owVHu+Fg/IrasLKjZrxuYfjk0s9QL26xsHQL51uYF31emmOhZbaH
+        hQHtgj70R7Ap03AD/SDihaR4bhmqWbOjE46fbIoK8P1hNOp4lpXh+N7CQLUCxGfUqTkbaQOKojlWzk9E
+        2RsxbcD+uNnCMjahvgaRvRHTBpyIiywsQ+vAZAvzN+ITLFr1qql/2TqpQan0D941pHbu70TmAAAAAElF
+        TkSuQmCC
+</value>
+  </data>
+  <data name="barButtonItem9.LargeGlyph" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAABGdBTUEAALGPC/xhBQAABsRJREFUWEe1
+        l2lsFGUYx8coVziirSCkgKkVF6JBPKIYghDPAJq1HBbTKppwGYGojR+EIH4wGo0kGhMRhXpQKEgp1F67
+        267tdrfdo92dntt272P23l7qF7/w93mns+vs2q73k/zSef/zzvP832tnyrFYtGgRNzo6yjhAnPqnJJPJ
+        U2q1+rODBw/mb9iwgZs9e7aY/09jxYoVrPjKsbExjI+P/yu0Wi22bt3Kb9u2LX/z5s3cnDlzpCo5QjKg
+        IPBv0el0KC0txfbt2/ldu3blb9myhZs7d65UaYb4Lw10dnbi8OHD2Lt3L8rKyvg9e/bkFxcXc/PmzZOq
+        TRO5DDiFGAb9UZFoPClqI8HftXhiShsKTLXV7Z04evQoysvLcejQIezbt49ne4LMiHtt2shl4K26PpRW
+        dYu0DwdF7cAVXmyXVVnBe0KitueidUr7Vo8PPvoYJ06cwPHjx3Hs2DF2zTc1NeXt3LlTqpgVuQy8+HUr
+        Np5sEGnuc4vas59r0lqXMyBqj33SmNaG/OGMHAxBEJQlJSVSxazIZcBGBQx2j4gQjYtal8OX1iKxhKiZ
+        hr1pLZaY0rJQ7t69W6qYFXIDdJbRZhlEs7E/A01nH1SG3iytH01Zmhx23+2fWqK/bCBCo9SYBuENJzPo
+        dQTxo3lANJgiGIqgob0nQ5MTjsSg67KLBpKJRG4D9EDagMpohzs8mgHvEMjAYGo0IkI4KhqQa3JYLmZA
+        0OvhqqlRXnriCa5w1iypqixSBlKupzNgEw38/RmofucDXFi6FA2rVtlUd91VVF9UxD29YIFUWQpmIJFI
+        pA2cuWbARXV3Bucazaggvbq5K80ltQVf1bRnaHJU7d24+sab+DwvD2eJKwUF44133KFsLCzklPPnS9Up
+        UgYIhCJR2gN2+CLJDHqdQWhN/YjH42kCQhj1Oj5DS5GICZi0fQyntRod332HLwsL8RWZqLrttus1BQVl
+        r8p/lJgBekjBHgzRuk6/BH/PwE+DZzDRWoxY3d0Im96Gs9uC85s24fQtt1z/ZvHiZw8sXChVp2AGYrGY
+        aECgdb3a1oPuoUAGOpsTdW022J2+NPygW5xqucaID9dhsq0E8Yb7ELm6EqHLNyPYUoI+ixa1R177smL1
+        am6tfDMyA9FoVEEmaGOFUaWyoIWOopy69l5UNZnQShsxBfttOFffmaEZDBpM6F5CouEBMnA/QtV5iNev
+        RbT2TvhqVpttqg8XlpeWSpWlSBkgaFpDMy5Bi7EPrE8KX0AQZyXVjoU8mDQeQaLxQSTVj1LRVYj9sEZs
+        h2uWJoXq/JXX3l/yxzfj8uXLuUgkoiAQCM5soJlGzPqk8PqDooGpdhjj1veQbHoESdVGjKo3UXEFRjWP
+        i3/Drc/v7a9UcMvybpCqyoIZCIfDCgJ+GtVZOm6XNHTMZFQ2mkjX47LGkuaiyiweQ3bN6yqo6KM02vsx
+        qdstLsG4dhu1H0LE8i7CXpvy5bLnpIpZwQyEQiEFAR+Nih3D7J/iHnEGesFMpvD4AjQDVvE62XsOSf1B
+        /Nz5Ksaan8bEj8X090lE28oQEoIIhQQlfSFJFbOCGaDXpYKAl5JOuwQjZKyjh71W07g8PvzQahWvx3or
+        MGE/j0n7WUwaXqEjuAtRzVYYTB2p/rkNBAIBRTAYhMfrR7XWBkMvvVplNJuH6MhZYO4ZSqPvHqSTYYSV
+        5zExcA6Tjiv42afCL8EWjJmOwKi/ghaaNZaX8uc24Pf7FdQJbo8Xl5u7oecdGaiNA/hebUaH1Z6mzdyP
+        8w1GfPpFBTauXwez+hR+CekwHu2Dw+WAzjKAZpo1lpfyK2f8ImIGfD6fgjrB6fbMuAQqPc8SpRlxunFN
+        24WTJ0+iqKgI5W8cgeB3pe+zXGzZ2DXln9lAQUEB5/V6FQQclHQmA03tNrA+KYYdLjJgQV1dHbq6ujLu
+        MVgujYFPtZU7duyQKmYFM+B2uxUej4cecuFqK49uuy+DNusIalossPYNpTFaB3CR7QGZJsdkoy+rDh4s
+        L+XPbcDlcimoE+sIW/8wTLz9P4ENiOWk/Er6Z0WqKIsF9HFAn86cyWRa7HQ6fyXwP3DdarWuP336NLdu
+        3TqpshRr1qzhKisrb7xw4cLq2traEyqVSk0YCZ4YIZxEgIgQ0T9BIFyEg+gjzIS2vr7+M8r/INWZu3//
+        fqmyFJKBOcQLxBlCTZiJQcJFhIgwESGSxAQxKYO1Rwl2n/Vj/b2EnbARWuI88TqR/wcDy5Yt4yoqKpiJ
+        m4j5xK3EcuJO4h7iIeJhiceJZ6bhKWI9kep3L7GKuJ1YQiwkZhFc5j7guN8Av+NsiCK55Z4AAAAASUVO
+        RK5CYII=
 </value>
   </data>
 </root>
